css/main.css
/* ... */
.navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
    margin-left: 0px;
    margin-right: 0px;
}

.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
    padding: 0px;
}




/* ==========================================================================
   Home Styles
   ========================================================================== */ 
#home {
	background: rgba(248,92,92,0.95);
	/*height: 650px;*/
}

.hero-text {
	padding-top: 15%;
}

.hero-text h1 {
	font-size: 80px;
    letter-spacing: 5px;
    line-height: 70px;
    margin-bottom: 15px;
}

.hero-text h2 {
	font-size: 30px;
	font-weight: 600;
	margin-bottom: 30px;
}




/* ==========================================================================
   Work Styles
   ========================================================================== */ 
#work, #resources {
	background: url(../img/shattered.jpg) repeat; 
	background-color: #232527;
	padding: 130px 0px 130px 0px;
}


.item {
	padding-top: 30px;
}

.project-title {
	background: #FFFFFF;
	padding: 12px 10px 10px 10px;
	margin-top: 0px;
}

.project-title p {
	color: #666;
	text-decoration: none;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
    font-size: 16px;
	text-transform:uppercase;

}

.work:hover {
	opacity: 0.8;
	
	transition: all 0.35s;
	-moz-transition: all 0.35s; /* Firefox 4 */
	-webkit-transition: all 0.35s; /* Safari and Chrome */
	-o-transition: all 0.35s; /* Opera */

}

/* ==========================================================================
   Github Issues Styles
   ========================================================================== */ 
#github-issues {
	background: white;
	padding: 130px 0px 10px 0px;
	height: auto;
}

#github-issues iframe {
  height: 600px;
}


/* ==========================================================================
   Project Styles
   ========================================================================== */
#project {
	background: url(../img/shattered.jpg) repeat;
	background-color: #232527;
	padding: 100px 0px 110px 0px;
	height: auto;
}


#project img {
    padding-bottom: 5px;
}

#project p {
    color: #767676;
    margin-bottom: 25px;
}


#project h3 {
	font-size: 27px;
    letter-spacing: 0px;
    line-height: 23px;
    color: #FFFFFF;  
    font-family: 'Open Sans', sans-serif;
	font-weight: 400;
}

#project h5 {
	font-size: 13px;
    color: #FFFFFF;
    line-height: 13px;   
}

a.back-to-work {
	font-size: 18px;
    letter-spacing: -0.5px;
    color: #F85D5D;  
    font-family: 'Open Sans', sans-serif;
	font-weight: 800;
    text-transform: uppercase; 
}

a:hover.back-to-work, a:active.back-to-work {
    color: #db5252;
    text-decoration: none;
}




/* ==========================================================================
   Client Styles
   ========================================================================== */
#clients {
	background:  #fff;
	border-bottom: 1px dashed #333;
	border-top: 1px dashed #333;
	padding-bottom: 20px;
}

.blue-overlay {
	background: rgba(117,210,215,0.92);
	padding: 130px 0px 130px 0px;
}

.featured-section-title {
	padding-top: 10px;
}

.partner-heading {border-bottom: 1px dotted #ccc;}

.partner-heading h6{
	margin-bottom: 3px;
}



/* ==========================================================================
   Services Styles
   ========================================================================== */
#services {
	background: #F3F3F3;
	padding: 130px 0px 10px 0px;
	height: auto;
}

#services h4 {
	margin-top: 50px;
}

.service-box {
	padding-bottom: 30px;
}

#call-to-action {
	background: #232527;
	padding: 30px 0px;
}

#call-to-action h4, #about-opendata h4 {
	color: #5F6263;
	font-family: 'Open Sans', sans-serif;
	font-weight: 300;
	font-size: 46px;
	line-height: 53px;
}

#about-opendata {
	padding: 130px 0px 10px 0px;
	background: #232527;
}

#about-opendata h5, #resources h5 {
    padding-top:15px;
    color:#bbbbbb;
}

#about-opendata dd, #about-opendata dt {
    color:#bbbbbb;
    display:inline-block;
}



/* ==========================================================================
   Team Styles
   ========================================================================== */
#team {
	background: url(../img/gray_jean.png) repeat;
	padding: 130px 0px 10px 0px;
	background-color: #EEEEEE;
}


.ch-grid {
	margin: 20px 0 0 0;
	padding: 0;
	list-style: none;
	display: block;
	text-align: center;
	width: 100%;
}

.ch-grid:after,
.ch-item:before {
	content: '';
    display: table;
}

.ch-grid:after {
	clear: both;
}

.ch-grid li {
	width: 220px;
	height: 220px;
	display: inline-block;
	margin: 20px;
	margin-bottom: 85px;
}



.ch-item {
	width: 100%;
	height: 100%;
	border-radius: 50%;
	position: relative;
	cursor: default;
	box-shadow:inset 0 0 0 16px rgba(255,255,255,0.6), 0 1px 2px rgba(0,0,0,0.1);
		
	-webkit-transition: all 0.4s ease-in-out;
	-moz-transition: all 0.4s ease-in-out;
	-o-transition: all 0.4s ease-in-out;
	-ms-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
}

.ch-img-1 { 
	background-image: url(../img/team_adi.jpg);
}

.ch-img-2 { 
	background-image: url(../img/team_gabrielle.jpg);
}

.ch-img-3 { 
	background-image: url(../img/team_justin.jpg);
}

.ch-img-4 {
	background-image: url(../img/team_petrus.jpg);
}

.ch-img-5 {
	background-image: url(../img/team_jason.jpg);
}


.ch-img-osman {
	background-image: url(../img/team_osman.jpg);
	background-position: right top;
}

.ch-img-6 {
	background-image: url(../img/team_greg.png);
}

.ch-img-hannah {
	background-image: url(../img/team_hannah.jpg);
}

.ch-img-siya {
	background-image: url(../img/team_siya.jpg);
}
/* ... */

